// Models/Toocha/DiscountType.cs

namespace App.Models.Toocha
{
    public enum DiscountType
    {
        Percentage, // Giảm theo %
        FixedAmount // Giảm một số tiền cố định
    }
}